--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,7 +89,7 @@ strong {
 	}
 
 	.content {
-		padding-left: 250px;
+		/* padding-left: 250px; */
 		overflow-y: hidden;
 		overflow-x: auto;
 		flex: 1;
